# desktop-pet

./: .gitignore  findings.md  index.html  package-lock.json  package.json  progress.md  task_plan.md  桌面宠物项目计划书.docx  桌面宠物项目计划书（第三版）.docx  桌面宠物项目计划书（第二阶段）.docx  桌面显眼包项目计划书（实际交付版）.docx
.github/workflows/: ci.yml
public/assets/live2d/Hiyori/: Hiyori.model3.json
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: boss_key.rs  click_sensor.rs  event_channel.rs  lib.rs
src-tauri/src/verifications/: atomic_lock.rs  channel_stress.rs  mod.rs
src/__tests__/: useDebouncedSave.test.ts
src/barrage/: barrage.ts  index.ts
src/components/: BarrageInput.vue  ContextMenu.vue  DialogueBubble.vue  DonateOverlay.vue  InventoryPanel.vue  PetCanvas.vue  SettingsPanel.vue  ShopPanel.vue  StatsPanel.vue  WorkTimer.vue
src/composables/: useAchievements.ts  useCustomBarrages.ts  useDebouncedSave.ts  useInteractionCounter.ts  useInventory.ts  useLive2DRenderer.ts  usePetAutoBehavior.ts  usePetRenderer.ts  usePetStats.ts  useTray.ts
src/data/: shop.ts
