[package]
name = "desktop-pet"
version = "0.1.0"
description = "桌面显眼包 - 你的桌面嘴替"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
anyhow = "1.0"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
